--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "apollo-server": "2.9.16",
     "axios": "0.19.1",
-    "graphql": "14.5.8"
+    "graphql": "14.5.8",
+    "mixin-deep": "^2.0.1",
+    "set-value": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
