--- a/api/functions/package.json
+++ b/api/functions/package.json
@@ -10,9 +10,12 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "dependencies": {
+    "apollo-server-express": "^2.9.16",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
     "firebase-tools": "^7.12.1"
