--- a/api/functions/package.json
+++ b/api/functions/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.9.16",
+    "axios": "^0.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
